--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,26 +3,29 @@
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
-      .message { font-size: 1.3em; font-weight: bold; }
+      .message { font-size: 1.3em; font-weight: bold; color:green;}
     </style>
   </head>
-<body>
+<body ng-app="LunchCheck">
    <div class="container">
      <h1>Lunch Checker</h1>
-
+      <div ng-controller="LunchCheckController">
          <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             <input id="lunch-menu" type="text" ng-model="menu"
+             placeholder="list comma separated dishes you usually have for lunch, not counting an 'empty' item"
+             class="form-control" style="border-color:{{color}};">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="check();">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
+         <div class="form-group message" style="color:{{color}};">
+           {{ message }}
          </div>
+       </div>
    </div>
 
 </body>
